--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,29 +1,34 @@
-name: Generate GitHub Snake
+name: Generate snake animation
 
 on:
-  push:
-    branches:
-      - main
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+
   workflow_dispatch:
 
-jobs:
-  generate-snake:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+  push:
+    branches:
+    - main
 
-      - name: Generate GitHub Snake
-        uses: Platane/snk@v3
+jobs:
+  generate:
+    permissions:
+      contents: write
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+    steps:
+      - name: generate snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+          outputs: dist/snake.svg?palette=github-dark
 
-      - name: Upload generated snake images as artifact
-        uses: actions/upload-artifact@v3
+
+      - name: push snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          name: github-snake-images
-          path: dist/
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
